--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,24 +3,35 @@ atomicwrites==1.3.0
 attrs==19.1.0
 Babel==2.6.0
 bleach==3.1.0
+bumpversion==0.5.3
 certifi==2019.3.9
 chardet==3.0.4
+DataProperty==0.43.1
 docutils==0.14
+dominate==2.3.5
 idna==2.8
 imagesize==1.1.0
 Jinja2==2.10.1
+latexcodec==1.0.7
 MarkupSafe==1.1.1
+mbstrdecoder==0.8.1
 mechcite==0.1.0
 more-itertools==7.0.0
+msgfy==0.0.7
 packaging==19.0
+pathvalidate==0.28.2
 pkginfo==1.5.0.1
 pluggy==0.11.0
 py==1.8.0
+pybtex==0.22.2
 Pygments==2.4.0
 pyparsing==2.4.0
+pytablewriter==0.46.1
 pytest==4.5.0
 pytest-runner==5.1
+python-dateutil==2.8.0
 pytz==2019.1
+PyYAML==5.1
 readme-renderer==24.0
 requests==2.22.0
 requests-toolbelt==0.9.1
@@ -33,8 +44,10 @@ sphinxcontrib-htmlhelp==1.0.2
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
+tabledata==0.9.1
 tqdm==4.32.1
 twine==1.13.0
+typepy==0.6.0
 urllib3==1.25.3
 wcwidth==0.1.7
 webencodings==0.5.1
